# Freenove_Big_Hexapod_Robot_Kit_for_Raspberry_Pi

./: .env.example  .gitignore  ADR.md  AI_CONTEXT.md  CHANGELOG.md  FREENOVE_ANALYSIS.md  Makefile  README.md  SPRINT_STATUS.md  audit_dependencies.sh  audit_routes.py  fix_all_imports_ultimate.sh  fix_imports.sh  point.txt  pyproject.toml  requirements.txt  tachikoma_client_final.py  test_all_camera_channels.py  test_api.sh  test_camera_channels.py  test_direction.py  test_hardware.py  test_hardware_integration.py  test_servo_orientation.py
api/: main.py  models.py
api/routers/: advanced.py  buzzer.py  camera.py  leds.py  movement.py  sensors.py  websocket.py
config/: config.yaml  hardware_map.yaml  logging.yaml
core/: config.py  dependencies.py  logger.py  robot_controller.py
core/hardware/: __init__.py  buzzer.py  camera.py  factory.py  gaits.py  kinematics.py  leds.py  movement.py  movement.py.backup  movement.py.backup2  movement.py.working  sensors.py
core/hardware/controllers/: __init__.py  hexapod_controller.py  pid.py
core/hardware/devices/: __init__.py  buzzer.py  camera.py  led.py  servo.py  ultrasonic.py
core/hardware/drivers/: README.md  __init__.py  adc.py  buzzer.py  camera.py  imu.py  led.py  mock_servo.py  pca9685.py  pca9685_servo.py  ultrasonic.py
core/hardware/examples/: advanced_hexapod.py  basic_usage.py
core/hardware/interfaces/: __init__.py  base.py  i2c.py  servo_controller.py
core/web/: server.py
core/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
core/web/frontend/src/: App.jsx  index.css
core/web/static/: app.js  style.css
core/web/templates/: index.html
docs/: ARCHITECTURE.md  CONTEXT.md  FREENOVE_ANALYSIS.md  ROADMAP.md
docs/api/: buzzer.md  leds.md
docs/gui/: video-streaming.md
docs/hardware/: servo_mapping.md
features/autonomous/: obstacle_avoidance.py
features/vision/: object_detection.py  qr_scanner.py
scripts/: calibrate_offsets.py  safe_neutral.py  safe_standup.py  test_camera.py  test_hardware.py  test_ik_breathe.py  test_led_real.py  test_one_by_one.py  test_servos.py  test_ultrasonic.py  test_walk.py
tachikoma/: __main__.py
tachikoma/api/: main.py  models.py
tachikoma/api/routers/: advanced.py  buzzer.py  camera.py  leds.py  movement.py  sensors.py  websocket.py
tachikoma/core/: config.py  dependencies.py  exceptions.py  logger.py  robot_controller.py  types.py
tachikoma/core/hardware/: __init__.py  buzzer.py  camera.py  factory.py  gaits.py  kinematics.py  led_animations.py  leds.py  movement.py  sensors.py
tachikoma/core/hardware/controllers/: __init__.py  hexapod_controller.py
tachikoma/core/hardware/devices/: __init__.py  buzzer.py  camera.py  led.py  servo.py  ultrasonic.py
tachikoma/core/hardware/drivers/: adc.py  buzzer.py  camera.py  imu.py  kalman.py  led.py  mock_servo.py  pca9685.py  pca9685_servo.py  ultrasonic.py
tachikoma/core/hardware/interfaces/: __init__.py  i2c.py  sensor_reader.py  servo_controller.py
tachikoma/core/interfaces/: camera.py  led.py  movement.py  sensor.py
tachikoma/core/models/: __init__.py  config.py
tachikoma/features/autonomous/: obstacle_avoidance.py
tachikoma/features/vision/: object_detection.py  qr_scanner.py
tachikoma/gui/: client.py
tachikoma/gui/widgets/: __init__.py  calibration_panel.py  camera_panel.py  led_panel.py  movement_panel.py  status_panel.py
tests/: conftest.py  test_led_animations.py
tests/integration/: test_api.py  test_buzzer_api.py  test_camera_api.py  test_hardware_factory.py  test_leds_api.py  test_movement_api.py  test_sensors_api.py  test_websocket_api.py
tests/unit/: test_adc.py  test_buzzer.py  test_config.py  test_imu.py  test_led_driver.py  test_mock_servo.py  test_obstacle_avoidance.py  test_pca9685_servo.py  test_robot_controller.py  test_ultrasonic.py  test_vision.py
